--- a/Menu/estilos.css
+++ b/Menu/estilos.css
@@ -1,13 +1,16 @@
 *{margin:0; padding:0; }
 
+.Sunset{
+  width: 100%;
+}
+
 body{
-  background: #848484;
+  background: #fff;
 }
 header{
   width: 100%;
   overflow: hidden;
-  background: #252932;
-  margin-bottom: 20px;
+  background: #000;
 }
 a#alogout{
   display: hidden;
@@ -17,14 +20,18 @@ a#alogout{
   right:0px;
 }
 
+.logo{
+  font-family: Kodchasan;
+
+}
 .logotipo{
   line-height:80px;
-  margin: auto;
+  margin: 0px;
   float: left;
 }
 
 .wrapper{
-  width: 90%;
+  width: 100%;
 max-width: 1000px;
 margin: auto;
 overflow: hidden
@@ -33,48 +40,44 @@ overflow: hidden
 header .logo {
   color: #f2f2f2;
   font-size: 50px;
-  line-height:100px;
+  line-height:95px;
   float: left;
 }
 header nav{
   float: right;
-  line-height: 100px;
+  line-height: 95px;
 }
 
 header nav a{
   display: inline-block;
-  color: #fff;
+  color:#f2f2f2;
   text-decoration: none;
   padding: 10px 20px;
   line-height: normal;
+  font-family: Muli;
   font-size: 20px;
-  font-weight: bold;
   -webkit-transition:all 500ms ease;
   -o-transition:all 500ms ease;
   transition:all 500ms ease;
 }
-.FtPendejos{
-  margin-bottom:0px;
-  float: right;
-}
 
 header nav a:hover{
-  background: #848484;
+  background: #3d3838;
   border-radius: 50px;
 }
 
 .header2{
   position: fixed;
-  height: 100px;
+  height: 80px;
 }
 
 .header2 .logo{
-  line-height: 100px;
+  line-height: 80px;
   font-size: 30px;
 }
 
 .header2 nav{
-  line-height: 100px;
+  line-height: 80px;
 }
 
 @media screen and (max-width:950px;) {
@@ -82,7 +85,7 @@ header nav a:hover{
   header nav{
     width: 100%;
     text-align: center;
-    line-height: 100px;
+    line-height: 80px;
 
   }
   .header2 {
@@ -90,7 +93,7 @@ header nav a:hover{
   }
   .header2 .logo,
   .header2 nav{
-    line-height: 50px;
+    line-height: 80px;
 
   }
 }
