--- a/Menu/estilos.css
+++ b/Menu/estilos.css
@@ -1,7 +1,7 @@
 *{margin:0; padding:0; }
 
-.Sunset{
-  width: 100%;
+*h4{
+  opacity: 0%;
 }
 
 body{
@@ -21,8 +21,37 @@ a#alogout{
 }
 
 .logo{
-  font-family: Kodchasan;
+  font-family: 'Work Sans', sans-serif;
+}
+  .btnmaterias{
+    margin: 0px;
+    font-family: 'Rubik', sans-serif;
+    background: #5d8ffc;
+    color: #fff;
+    border: 1px solid #5d8ffc;
+    font-size: 30px;
+    border-radius: 25px;
+    padding: 15px;
+    display: block;
+    width: 300px;
+    height: 80px;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    margin-top: 300px;
+    margin-right:50px;
+  }
+  .quecon{
+    margin: 0;
+  margin-left:90px;
 
+  }
+.aprender{
+  margin-left: 130px;
+}
+.nohay{
+margin-top: 40px;
+margin-left: 10px;
 }
 .logotipo{
   line-height:80px;
@@ -37,6 +66,28 @@ margin: auto;
 overflow: hidden
 }
 
+.content-img{
+  background-image: url('./Media/FondoDePagina.png');
+  background-size:cover;
+  background-repeat: no-repeat;
+  height:100vh;
+  width: 100%;
+}
+.bgtxt{
+  background-color: #ff0000;
+  opacity: 0.6;
+}
+.content-txt{
+font-family: Muli;
+font-style: bold;
+float: right;
+margin: 0px;
+color: #000;
+position: relative;
+left: 320px;
+margin-top: 100px;
+font-size: 30px;
+}
 header .logo {
   color: #f2f2f2;
   font-size: 50px;
