--- a/Menu/estilos.css
+++ b/Menu/estilos.css
@@ -148,3 +148,53 @@ header nav a:hover{
 
   }
 }
+.signupbtn{
+  margin: 0px;
+  font-family: 'Rubik', sans-serif;
+  background: #5d8ffc;
+  color: #fff;
+  border: 1px solid #5d8ffc;
+  font-size: 15px;
+  border-radius: 15px;
+  padding: 15px;
+  display: block;
+  width: 300px;
+  height: 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+.cancelbtn{
+  align-items: center;
+  margin: 0px;
+  font-family: 'Rubik', sans-serif;
+  background: #5d8ffc;
+  color: #fff;
+  border: 1px solid #5d8ffc;
+  font-size: 15px;
+  border-radius: 15px;
+  padding: 15px;
+  display: block;
+  width: 300px;
+  height: 20px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+}
+.login1{
+border-radius: 15px;
+border:1px solid #777;
+}
+
+.pass1{
+border-radius: 15px;
+border:1px solid #777;
+
+}
+.loginn{
+  align-items: center;
+}
+
+.email{
+border-radius: 15px;
+}
