--- a/Menu/estilos.css
+++ b/Menu/estilos.css
@@ -16,8 +16,6 @@ a#alogout{
   display: hidden;
 }
 .aregistro{
-  position: relative;
-  right:0px;
 }
 
 .logo{
@@ -25,6 +23,7 @@ a#alogout{
 }
   .btnmaterias{
     margin: 0px;
+    display:flex;
     font-family: 'Rubik', sans-serif;
     background: #5d8ffc;
     color: #fff;
@@ -79,14 +78,15 @@ overflow: hidden
 }
 .content-txt{
 font-family: Muli;
-font-style: bold;
+font-style: regular;
 float: right;
 margin: 0px;
 color: #000;
-position: relative;
-left: 320px;
+margin-left: 360px;
 margin-top: 100px;
 font-size: 30px;
+position: relative;
+left: 320px;
 }
 header .logo {
   color: #f2f2f2;
@@ -158,7 +158,7 @@ margin-top: 15px;
   border-radius: 15px;
   padding: 15px;
   display: block;
-  width: 300px;
+  width: 225px;
   height: 20px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -175,7 +175,7 @@ margin-top: 15px;
   border-radius: 15px;
   padding: 15px;
   display: block;
-  width: 300px;
+  width: 225px;
   height: 20px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
@@ -184,31 +184,86 @@ margin-top: 15px;
 .login1{
 border-radius: 15px;
 border:1px solid #777;
-width: 300px;
+width: 450px;
 height: 35px;
+margin-top: 30px;
 }
 
 .pass1{
 border-radius: 15px;
 border:1px solid #777;
-width: 300px;
+width: 450px;
 height: 35px;
+margin-top: 30px;
 }
 .loginn{
-display: none;
-  margin-left: 400px;
-  margin-top: 50px;
+  display: none;
+  background-color: #fff;
+  width: 460px;
+  margin-left: 500px;
 }
 .isd{
   font-family: Muli;
-  margin-left: 190px;
+  color: #000;
+  margin-left: 100px;
   font-style: bold;
   font-size: 30px;
 }
 .redirect{
-  margin-top: 60px;
-  margin-left: 180px;
+  margin-top: 100px;
+  margin-left: 100px;
 }
 .email{
 border-radius: 15px;
+}
+
+.content.two{
+  width: 100%;
+  padding:40px;
+  background: #f2f2f2;
+}
+
+.content-details{
+  width: 80%;
+  margin:auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.content-item2{
+width: 300px;
+text-align: center;
+margin:20px;
+}
+
+.content-three{
+  width: 100%;
+  background: #f7f7f7;
+  padding-bottom: 40px;
+}
+
+.content-module{
+  width: 80%;
+margin: auto;
+text-align: center;
+}
+
+.skel{
+  float: left;
+}
+
+.cards{
+  float: right;
+}
+.content-module h3{
+  margin-top: 40px;
+}
+.content-module img{
+  transition: all 300ms;
+  margin-top: 40px;
+}
+.content-module img:hover{
+  transform: rotate(-10deg);
+  transition: all 300ms;
 }
