--- a/Menu/estilos.css
+++ b/Menu/estilos.css
@@ -11,6 +11,8 @@ header{
   width: 100%;
   overflow: hidden;
   background: #000;
+  position: relative;
+  z-index: 1;
 }
 a#alogout{
   display: hidden;
@@ -197,7 +199,7 @@ height: 35px;
 margin-top: 30px;
 }
 .loginn{
-  display: none;
+  display:none;
   background-color: #fff;
   width: 460px;
   margin-left: 500px;
@@ -221,6 +223,7 @@ border-radius: 15px;
   width: 100%;
   padding:40px;
   background: #f2f2f2;
+  font-family: Muli;
 }
 
 .content-details{
@@ -235,6 +238,7 @@ border-radius: 15px;
 width: 300px;
 text-align: center;
 margin:20px;
+font-family: Muli;
 }
 
 .content-three{
@@ -247,6 +251,7 @@ margin:20px;
   width: 80%;
 margin: auto;
 text-align: center;
+font-family: Muli;
 }
 
 .skel{
@@ -258,6 +263,8 @@ text-align: center;
 }
 .content-module h3{
   margin-top: 40px;
+  padding-top: 20px;
+
 }
 .content-module img{
   transition: all 300ms;
