--- a/Registro/estiloreg.css
+++ b/Registro/estiloreg.css
@@ -1,5 +1,5 @@
 body {
-  background: #848484;
+  background: #f2f2f2;
   padding: 0%;
   margin: 0%;
   font-family: 'Nunito', sans-serif;
@@ -18,12 +18,14 @@ button {
 }
 
 .datos{
-  color: #f2f2f2;
+  color: #5d8ffc;
   font-size: 26px;
+  margin-left: 30px;
 }
 
 .login-div  {
-  width: 20%;
+  width: 25%;
+  background-color: #fff;
   margin: 0px auto;
   margin-top: 80px;
   padding: 20px;
@@ -61,7 +63,7 @@ button {
   background: #5d8ffc;
   color: #fff;
   border: 1px solid #5d8ffc;
-  border-radius: 5px;
+  border-radius: 100px;
   padding: 15px;
   display: block;
   width: 100%;
