--- a/Registro/estiloreg.css
+++ b/Registro/estiloreg.css
@@ -1,5 +1,5 @@
 body {
-  background: #848484;
+  background: #f2f2f2;
   padding: 0%;
   margin: 0%;
   font-family: 'Nunito', sans-serif;
@@ -11,19 +11,33 @@ input  {
   font-weight: 700;
 }
 
+.iti-flag {
+  background-image: url("intl-tel-input-14.0.0/build/img/flags.png");
+
+}
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+  .iti-flag {background-image: url("intl-tel-input-14.0.0/build/img/flags@2x.png");}
+}
+
 button {
   font-family: 'Nunito', sans-serif;
   font-weight: 700;
   font-size: 16px;
+  top: 13px;
 }
 
 .datos{
-  color: #f2f2f2;
+  color: #5d8ffc;
   font-size: 26px;
+  margin-left: 30px;
 }
 
+.intl-tel-input { width: 100%; }
+
 .login-div  {
-  width: 20%;
+  width: 25%;
+  background-color: #fff;
   margin: 0px auto;
   margin-top: 80px;
   padding: 20px;
@@ -61,7 +75,7 @@ button {
   background: #5d8ffc;
   color: #fff;
   border: 1px solid #5d8ffc;
-  border-radius: 5px;
+  border-radius: 100px;
   padding: 15px;
   display: block;
   width: 100%;
@@ -82,11 +96,13 @@ button {
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
 
+
 }
 
 .login-div button:hover  {
   cursor: pointer;
 }
+
 
 .user-div button:hover {
   cursor: pointer;
