--- a/Materias/Matematica/estilos.css
+++ b/Materias/Matematica/estilos.css
@@ -1,8 +1,14 @@
+*{margin: 0px; padding: 0px;}
 .textbox{
   border-radius: 100px;
   margin-left: 500px;
   width: 150px;
   height: 35px;
+  display: block;
+  outline: none;
+}
+.cargarm{
+color: #5d8ffc 
 }
 
 .btnpublish{
@@ -16,5 +22,62 @@
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
-    
+
+}
+header{
+  width: 100%;
+  overflow: hidden;
+  background: #000;
+}
+
+.logo{
+  font-family: Kodchasan;
+
+}
+.logotipo{
+  line-height:80px;
+  margin: 0px;
+  float: left;
+}
+a#alogout{
+  display: hidden;
+}
+
+.wrapper{
+  width: 100%;
+max-width: 1000px;
+margin: auto;
+overflow: hidden
+}
+
+header .logo {
+  color: #f2f2f2;
+  font-size: 50px;
+  line-height:95px;
+  float: left;
+}
+header nav{
+  float: right;
+  line-height: 95px;
+}
+
+header nav a{
+  display: inline-block;
+  color:#f2f2f2;
+  text-decoration: none;
+  padding: 10px 20px;
+  line-height: normal;
+  font-family: Muli;
+  font-size: 20px;
+  -webkit-transition:all 500ms ease;
+  -o-transition:all 500ms ease;
+  transition:all 500ms ease;
+}
+
+header nav a:hover{
+  background: #3d3838;
+  border-radius: 50px;
+}
+.cajapublicar{
+  margin-top: 40px;
 }
