--- a/Materias/Matematica/estilos.css
+++ b/Materias/Matematica/estilos.css
@@ -7,85 +7,9 @@
   display: block;
   outline: none;
 }
-
 .cargarm{
 color: #5d8ffc
 }
-
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-
-
-.modal-content  {
-    background-color: #fefefe;
-    margin: 7% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width:35%;
-    height:45%;
-  }
-
-.desc{
-  style="background: rgb(255, 255, 255);
-  border: none;
-  border-radius: 0px;
-  color: rgb(51, 51, 51);
-  display: block;
-  font-size: 11pt;
-  height: 68px;
-  line-height: 18pt;
-  max-height: 140px;
-  overflow: hidden;
-  overflow-wrap: break-word;
-  padding: 10px 15px;
-  resize: none; width: 100%;
-  margin: 20% auto;
-
-
-
-}
-
-.cabeza {
-  border-bottom: none;
-  padding: 0px;
-  box-sizing: border-box;
-  margin-top: 2px;
-
-}
-
-
-
-
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    margin-top: 2px;
-
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-
 
 .btnpublish{
   background: #5d8ffc;
@@ -158,6 +82,8 @@ header nav a:hover{
 .bground{
   background-image: url('../Media/Matematica.jpg');
   background-size: cover;
+  padding: 0px; 
+  margin: 0px;
   repeat: no-repeat;
   height: 100%;
   width: 100%;
@@ -165,31 +91,35 @@ header nav a:hover{
 .post {
 padding:20px;
 background-color: transparent;
+.post hvr-glow{
+  width: 600px;
+  height: 350px;
+  margin-left: 50%;
+  background-color:#fff;
+
 }
 .post-name{
   margin-left: 350px;
-  width: 600px;
-  height: 60px;
-  font-size: 34px;
-  font-style: bold;
-  font-family: Muli;
-  background-color:#000;
-  opacity: 0.8;
-  color:#fff ;
-  padding: 10px;
+width: 600px;
+height: 40px;
+opacity: 0.8;
+font-size: 24px;
+font-family: Muli;
+background-color: #000;
+color:#fff;
+padding: 10px;
 }
 
 .post-desc{
-  margin-left:350px;
-  width: 600px;
-  height: 90px;
-  font-size: 24px;
-  font-family: Muli;
-  opacity: 0.8;
-  background-color:#000;
-  color:#fff ;
-  padding: 10px;
-
+  margin-left: 350px;
+width: 600px;
+height: 40px;
+opacity: 0.8;
+font-size: 24px;
+font-family: Muli;
+background-color: #000;
+color:#fff;
+padding: 10px;
 }
 
 .post-num{
