--- a/Menu/estilos.css
+++ b/Menu/estilos.css
@@ -36,6 +36,8 @@ a#alogout{
     display: block;
     width: 300px;
     height: 80px;
+    outline: none;
+    cursor:pointer;
     transition: 0.3s;
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
